--- a/wd/css/style.css
+++ b/wd/css/style.css
@@ -34,7 +34,7 @@ body{
 
 footer{
 
-    margin-top:50px
+    margin-top:50px;
     position:relative;
     bottom:0;
     background-color: #1199FF;
